--- a/flutter_ui/pubspec.yaml
+++ b/flutter_ui/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   web_socket_channel: ^2.1.0
+  provider: ^6.0.0
+  json_patch: ^3.0.0
 
 dev_dependencies:
   flutter_test:
