--- a/flutter_ui/pubspec.yaml
+++ b/flutter_ui/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   web_socket_channel: ^2.1.0
   provider: ^6.0.0
   json_patch: ^3.0.0
+  json_path: ^0.7.4
+  json_schema: ^5.2.0
 
 dev_dependencies:
   flutter_test:
